# renovate-wont-upgrade-uv

./: README.md  pyproject.toml  renovate.json5
